add GROOVY_CMD_HOME support

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,1 @@
-/hello.class
-/sw.class
-/gsw$_formatGoogleResult_closure3.class
-/gsw$_formatGoogleSimpleResult_closure4.class
-/gsw$_run_closure1.class
-/gsw$_run_closure2.class
-/gsw.class
-/gsw$_formatGoogleSimpleResult_closure3.class
+*.class
